added times new roman font to the template

--- a/misq/_extensions/misq/partials/_authors.tex
+++ b/misq/_extensions/misq/partials/_authors.tex
@@ -7,4 +7,8 @@ $-- Use it if you need to insert content at this specific place of the main Pand
 $-- Here we are using it to format the authors part of the template.
 $-- %%%%%%%%%%%%%%%
 
-$it.name.literal$$if(it.orcid)$~\orcidlink{$it.orcid$}$endif$$for(it.affiliations)$\\$it.name$$endfor$\\$if(it.email)$\href{mailto:$it.email$}{$it.email$}$endif$
+\textbf{\normalsize $it.name.literal$} % Author name in bold and normal size
+$if(it.orcid)$~\orcidlink{$it.orcid$}$endif$ % ORCID link if available
+$for(it.affiliations)$\\{\normalsize $it.name$}$endfor$ % Affiliations in normal font
+\\$if(it.email)$\href{mailto:$it.email$}{\normalsize\textit{$it.email$}}$endif$ % Email in italic
+
