--- a/misq/_extensions/misq/partials/before-bib.tex
+++ b/misq/_extensions/misq/partials/before-bib.tex
@@ -1,4 +1,46 @@
-$-- Placed after the content of the document, but before the bibliography.
-$-- %%%% TODO %%%%%
-$-- Use it if you need to insert content at this specific place of the main Pandoc's template. Otherwise, remove it.
-$-- %%%%%%%%%%%%%%%
+
+
+\def\spacingset#1{\renewcommand{\baselinestretch}%
+{#1}\small\normalsize} \spacingset{1}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+$if(date)$
+\date{$date$}
+$endif$
+$if(journal.blinded)$
+\spacingset{.8}
+\bigskip
+\bigskip
+\bigskip
+\begin{center}
+  {\LARGE\bf $title$}
+\end{center}
+\smallskip
+\bigskip
+\spacingset{1}
+$else$
+\title{\bf $title$}
+\author{
+$for(by-author)$
+$it.name.literal$$if(it.acknowledgements)$\thanks{$it.acknowledgements$}$endif$\\
+$for(it.affiliations)$$if(it.department)$$it.department$$if(it.name)$, $endif$$endif$$if(it.name)$$it.name$$endif$$if(it.department)$\\$elseif(it.name)$\\$endif$
+$endfor$$sep$and\\$endfor$}
+\maketitle
+$endif$
+
+\bigskip
+\bigskip
+\begin{abstract}
+$abstract$
+\end{abstract}
+
+$if(keywords)$
+\noindent%
+{\it Keywords:} $for(keywords)$$it$$sep$, $endfor$
+\vfill
+$endif$
+
+\newpage
+\spacingset{1.9} % DON'T change the spacing!
